--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
+<!--
+	Contrubuitor: Eduardo Programador
+	Website: www.eduardoprogramador.com
+-->
+
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
